--- a/TableroSLAs/PPMCsApbLista.html
+++ b/TableroSLAs/PPMCsApbLista.html
@@ -42,22 +42,23 @@
                       <tr>
                         <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                         <td class="th"><strong>Buscar</strong></td> 
-                        <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
+                        <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                       </tr>
+ 
                     </table>
  
                     <table class="Record" cellspacing="0" cellpadding="0">
                       <!-- BEGIN Error -->
                       <tr id="{@error-block}" class="Error">
-                        <td colspan="10">{Error}</td>
+                        <td colspan="11">{Error}</td> 
                       </tr>
-                      <!-- END Error -->
+ <!-- END Error -->
                       <tr class="Controls">
                         <td class="th"><label for="grsBuscas_id_proveedor">Proveedor</label></td> 
                         <td>
                           <select id="grsBuscas_id_proveedor" name="{s_id_proveedor_Name}">
                             <option selected value="">Seleccionar Valor</option>
-                            {s_id_proveedor_Options}
+ {s_id_proveedor_Options} 
                           </select>
  </td> 
                         <td class="th"><label for="grsBuscas_numero">Numero</label></td> 
@@ -66,44 +67,49 @@
                         <td>
                           <select id="grsBuscas_mesparam" name="{s_mesparam_Name}">
                             <option selected value="0">Cualquiera</option>
-                            {s_mesparam_Options}
+ {s_mesparam_Options} 
                           </select>
  </td> 
                         <td class="th"><label for="grsBuscas_anioparam">Año</label></td> 
                         <td>
                           <select id="grsBuscas_anioparam" name="{s_anioparam_Name}">
                             <option selected value="">Seleccionar Valor</option>
-                            {s_anioparam_Options}
+ {s_anioparam_Options} 
                           </select>
  </td> 
                         <td>Analista&nbsp;</td> 
                         <td>
                           <select id="grsBuscasAnalista" name="{sAnalista_Name}">
                             <option selected value="">Seleccionar Valor</option>
-                            {sAnalista_Options}
+ {sAnalista_Options} 
                           </select>
- </td>
+ </td> 
+                        <td><label for="grsBuscasSLO" style="display: inline;">SLO</label><input type="checkbox" name="{sSLO_Name}" value="1" {sSLO} id="grsBuscasSLO"></td> 
                       </tr>
  
                       <tr class="Bottom">
-                        <td style="TEXT-ALIGN: right" colspan="10">
-                          <!-- BEGIN Button Button_DoSearch --><input type="submit" id="grsBuscaButton_DoSearch" class="Button" alt="Buscar" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
+                        <td style="TEXT-ALIGN: right" colspan="11">
+                          <!-- BEGIN Button Button_DoSearch --><input type="submit" id="grsBuscaButton_DoSearch" class="Button" alt="Buscar" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td> 
                       </tr>
+ 
                     </table>
-                  </td>
+ </td> 
                 </tr>
+ 
               </table>
+ 
             </form>
-            <!-- END Record grsBusca --></td> 
+ <!-- END Record grsBusca --></td> 
           <td>
             <div style="TEXT-ALIGN: center">
 <a href="{lkTableroSLAs_Src}" id="lkTableroSLAs">Tablero SLAs</a> <a href="{lkCuadroNS_Src}" id="lkCuadroNS">Cuadro Ns RSs</a> <a href="{lkDetalleRS_Src}" id="lkDetalleRS">Detalle RSs</a> 
             </div>
-          </td>
+ </td> 
         </tr>
+ 
       </table>
-    </td> 
-    <td></td>
+ </td> 
+    <td></td> 
   </tr>
  
   <tr>
@@ -117,10 +123,11 @@
               <tr>
                 <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                 <td class="th"><strong>Requerimientos de Apertura </strong></td> 
-                <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
+                <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
               </tr>
+ 
             </table>
-            <strong></strong><strong></strong><strong></strong><strong></strong><strong></strong><strong></strong> 
+ <strong></strong><strong></strong><strong></strong><strong></strong><strong></strong><strong></strong> 
             <table class="Grid" cellspacing="0" cellpadding="0">
               <tr class="Caption">
                 <th scope="col">
@@ -173,6 +180,7 @@
                 de Servicio</th>
  
                 <th scope="col">{lAnalista}</th>
+ 
               </tr>
  
               <!-- BEGIN Row -->
@@ -191,20 +199,20 @@
                   <!-- BEGIN Image imgCumpleHE --><img id="grdReqsAperturaimgCumpleHE" alt="" src="{imgCumpleHE}"><!-- END Image imgCumpleHE --></td> 
                 <td style="TEXT-ALIGN: center">{REQ_SERV}&nbsp; 
                   <!-- BEGIN Image imgCumpleRS --><img id="grdReqsAperturaimgCumpleRS" alt="" src="{imgCumpleRS}"><!-- END Image imgCumpleRS --></td> 
-                <td>{Analista}</td>
+                <td>{Analista}</td> 
               </tr>
  <!-- END Row -->
               <!-- BEGIN NoRecords -->
               <tr class="NoRecords">
-                <td colspan="13">No hay registros</td>
+                <td colspan="13">No hay registros</td> 
               </tr>
-              <!-- END NoRecords -->
+ <!-- END NoRecords -->
               <tr class="Footer">
                 <td colspan="13">
                   <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
- {PageSize_Options}
+ {PageSize_Options} 
                   </select>
  
                   <!-- BEGIN First_On --><a href="{First_URL}"><img alt="{First_URL}" src="Styles/{CCS_Style}/Images/First.gif"></a> <!-- END First_On -->
@@ -214,15 +222,17 @@
                   <!-- BEGIN Next_On --><a href="{Next_URL}"><img alt="{Next_URL}" src="Styles/{CCS_Style}/Images/Next.gif"></a> <!-- END Next_On -->
                   <!-- BEGIN Next_Off --><img alt="{Next_URL}" src="Styles/{CCS_Style}/Images/NextOff.gif"><!-- END Next_Off -->
                   <!-- BEGIN Last_On --><a href="{Last_URL}"><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/Last.gif"></a> <!-- END Last_On -->
-                  <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->&nbsp;</td>
+                  <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->&nbsp;</td> 
               </tr>
+ 
             </table>
-          </td>
+ </td> 
         </tr>
+ 
       </table>
-      <!-- END Grid grdReqsApertura --><br>
+ <!-- END Grid grdReqsApertura --><br>
     </td> 
-    <td></td>
+    <td></td> 
   </tr>
 </table>
 <p></p>
