Ajuste comentarios automáticos
Se quita la observación de que se rebasa el NS cuando el CC no esta
cerrado

--- a/TableroSLAs/PPMCsApbDetalle.html
+++ b/TableroSLAs/PPMCsApbDetalle.html
@@ -408,7 +408,7 @@ function addObservaciones(){
                 if(document.getElementById("mc_info_rs_ap_ECsTipoRequerimiento").value == 1){//Si es control de cambios y no esta cerrado marca todo como rebasado
             if(document.getElementById("mc_info_rs_ap_EChdEstado").value!="Cerrado"){
                 if(document.getElementById("mc_info_rs_ap_ECsHorasManuales").value!=0){
-                    sObservaciones= sObservaciones + "\nEl nivel de servicio se reporta como rebasado por que el control de cambio no cuenta con el estado de cierre que corresponde";
+                    //sObservaciones= sObservaciones + "\nEl nivel de servicio se reporta como rebasado por que el control de cambio no cuenta con el estado de cierre que corresponde";
                 } 
             }
         }
