Creación de plantilla y reporte para Lista de Entregables
Lista de verificación Entregables Contractuales SDMA4 , reporte de
desempeño

--- a/TableroSLAs/MainAdmin.html
+++ b/TableroSLAs/MainAdmin.html
@@ -20,6 +20,8 @@
     <td><a href="{Link7_Src}" id="Link7">Gráficas</a></td> 
     <td><a href="{Link8_Src}" id="Link8">Reportes MyM</a></td> 
     <td><a href="{Link4_Src}" id="Link4">Usuarios</a></td>
+    <td><a href="{Link9_Src}" id="Link9">Carga de Datos</a></td>
+    <td><a href="{Link10_Src}" id="Link10">Reporte Entregables</a></td>
   </tr>
 </table>
 </p>
